# icemc

./: ,  .gitignore  .rootlogon.C  CMakeLists.txt  ChanTrigger.cc  ChanTrigger.h  Constants.h  EnvironmentVariable.cc  EnvironmentVariable.h  GlobalTrigger.cc  GlobalTrigger.h  LinkDef.h  Makefile  Makefile.arch  Primaries.cc  Primaries.h  README  README.md  Settings.cc  Settings.h  SimulatedSignal.cc  SimulatedSignal.h  Spectra.cc  Spectra.h  Taumodel.cc  Taumodel.hh  Tools.cc  Tools.h  aliases.sh  altitudes.txt  anita.cc  anita.hh  backup-md5.sh  balloon.cc  balloon.hh  buffer.hh  bvv-macro.h  bvv-util.cpp  bvv-util.h  counting.cc  (+94 more)
CVS/: Entries  Repository
GRBs/: plotGRB.cc  rootifyGRB.cxx
GRBs/data/: GRB.root  GRBIceCube.root  GRBSwift.root  Summary_table.txt  swift_grb.tsv
PLOTS/WForms/: H-V-WF.gpl  H-V-WF.sh
SCRIPTS/: .gitignore  H-H-WF.sh  column-from-parlist.sh  gdb-dump-obj.sh  gdb-dump-v_banding_rfcm_forfft.sh  gdb-dump.sh  gdb-tmp_volts-plot.sh  group-prefixed-rows.sh  testEAS-save-std.sh  transpose.sh  two-col-plot.sh  view-gpl-eps.sh  wrap-gdb-dump.sh  wrap-gdb-dump1.sh  wrap-hv-compare-ver.sh  wrap-hv-stdout.sh
archivedInputs/: README.md  inputs.archived.anita3.conf  inputs.txt.anita2  inputs.txt.anita3  inputs.txt.anitahill  inputs.txt.default  inputs.txt.eeva  inputs.txt.fullbandonly  inputs.txt.roughness  inputs.txt.roughness_singleray
blazars/: 3FGL.root  3fgl.csv  blazars.root  data_3fgl.csv  fava.h  fava.root  get3FGL.py  getFlareInfo.cc  makeLightCurveTree.py  notes.txt  plotLightCurve.cc  plotSkyMap.cc  rootify3FGL.cxx  stealFAVA.py
config/: a3candidate.conf  a3wais.conf  anita1.conf  anita2.conf  anita3.conf  anita3.refactor.conf  anita3_trigEffScan.conf  anita4.conf  inputs.anita1.conf  inputs.anita2.conf  inputs.anita3.conf  inputs.conf
config/archivedInputs/: README.md
data/: ANITA-III_geometry.txt  Anita3_ImpulseResponseDigitizer.root  Anita3_ImpulseResponseTrigger.root  Anita4_ImpulseResponseTrigger.root  RayleighAmplitudesAnita3_noSun_Interp.root  SampleTurf_icemc_anita3.root  SampleTurf_run42to367_anita4.root  SignalChainImpulseResponseTrigger_anita3_temp.root  SignalChainImpulseResponse_anita3.root  SignalChainImpulseResponse_anita3_shifted.root  TempImpulseResponseAnita3.root  TriggerEfficiencyScanPulser_anita3.root  TriggerEfficiencyScanPulser_anita4_33dB_avg_trimmed.root  anita2gps_pitchandroll.root  anita3gps_pitchroll.root  anita4gps_pitchroll.root  anitaIIIPhotogrammetry.csv  anitaIVPhotogrammetry.csv  diode_anita3.root  grb_alt_az_for_icemc.txt  index.txt  notchesDefault12OnMeasurement.txt  notchesDefault12OnModel.txt  roughness_full.txt  roughness_full_dPdtheta.txt  sumPicoImpulse.root  threshScan_anita3.root  turfrate_icemc_anita3.root
data/CVS/: Entries  Repository
data/roughness/: 1000grit_s_pol.txt  1500grit_s_pol.txt  400grit_s_pol.txt  flatglass.txt  masterfile.py  spline_demo.cc
data/roughness_tables/: combined_inc0p0_nsims10000_hp64_beckmann.hpx  combined_inc10p0_nsims10000_hp64_beckmann.hpx  combined_inc12p0_nsims10000_hp64_beckmann.hpx  combined_inc13p0_nsims10000_hp64_beckmann.hpx  combined_inc15p0_nsims10000_hp64_beckmann.hpx  combined_inc16p0_nsims10000_hp64_beckmann.hpx  combined_inc17p0_nsims10000_hp64_beckmann.hpx  combined_inc18p0_nsims10000_hp64_beckmann.hpx  combined_inc27p0_nsims10000_hp64_beckmann.hpx  combined_inc29p0_nsims10000_hp64_beckmann.hpx  combined_inc30p0_nsims10000_hp64_beckmann.hpx  combined_inc33p0_nsims10000_hp64_beckmann.hpx  combined_inc34p0_nsims10000_hp64_beckmann.hpx  combined_inc38p0_nsims10000_hp64_beckmann.hpx  (+45 more)
data/tuffs/: configAdb.csv  (+13 more)
doc/: Doxyfile  NotesOnAntennaGainCoordinates.txt  XFintoIceMC.py
fluxGeneration/: batchSpecSim.sh  compareSpectra.py  note.txt  simulatedNeutrinoFlux.py
fluxes/: README  toExponent.py
include/: ANITA.h  AbstractSources.h  AnitaSimOutput.h  Antarctica.h  AskaryanFactory.h  AskaryanFreqs.h  AskaryanFreqsGenerator.h  AskaryanRadiationModel.h  ChanTrigger.h  CommandLineOptions.h  CommandLineOpts.h  ConnollyEtAl2011.h  Constants.h  CrossSectionModel.h  Crust.h  Crust2.h  Detector.h  DiffuseFlux.h  Earth.h  EarthModel.h  Energy.h  EnvironmentVariable.h  Event.h  EventGenerator.h  FTPair.h  FancyTTreeInterpolator.h  GeneratedNeutrino.h  GlobalTrigger.h  IcemcLog.h  IcemcRootOutput.h  IcemcStatistics.h  IcemcTextFileOutput.h  ImpulsiveRadioGenerator.h  Inelasticity.h  Integrator.h  Interaction.h  InteractionGenerator.h  LocalCoordinateSystem.h  LoopInfo.h  MonoEnergetic.h  (+46 more)
limits/: Acceptances.h  LimitWCustomFlux.C  Makefile  README.md  anita3paperLimit.C  anita4paperLimit.C  customFluxLimitPlot.cxx  getNumEvents.C  icemcPaperLimit.C  makelimitplot.cc  murase_agn_jet.csv  ns-ns_merger.csv  pulsar.csv  takami_cosmogenic.csv  tempAcceptance.C  tempLimit.C  tempLimitA3.C  tempLimitCosmin.C  yuksel_grb.csv  yuksel_max.csv  yuksel_min.csv  yuksel_qso.csv  yuksel_sfh.csv
projections/: README  computeProjections.C  projections.root
src/: ANITA.cc  AbstractSources.cc  AnitaSimOutput.cc  Antarctica.cc  AskaryanFactory.cc  AskaryanFreqs.cc  AskaryanFreqsGenerator.cc  AskaryanRadiationModel.cc  ChanTrigger.cc  CommandLineOptions.cc  CommandLineOpts.cc  ConnollyEtAl2011.cc  Constants.cc  CrossSectionModel.cc  Crust.cc  Crust2.cc  Detector.cc  DiffuseFlux.cc  Earth.cc  EarthModel.cc  Energy.cc  EnvironmentVariable.cc  Event.cc  EventGenerator.cc  FTPair.cc  FancyTTreeInterpolator.cc  FancyTTreeInterpolator.cxx  GeneratedNeutrino.cc  GlobalTrigger.cc  IcemcLog.cc  IcemcRootOutput.cc  IcemcStatistics.cc  IcemcTextFileOutput.cc  ImpulsiveRadioGenerator.cc  Inelasticity.cc  Integrator.cc  Interaction.cc  InteractionGenerator.cc  LoopInfo.cc  MonoEnergetic.cc  (+45 more)
supernovae/: a3_notes.txt  fullSkyViewer.cc  fullSkyViewerA3.cc  fullSkyViewerA4.cc  getSupernovae.py  multiRunComparison.cxx  plotSuperNovaeTNS.cc  rootifySupernovae.cxx  supernovae.root
test/: icemc.cc  icemc2.cc  icemc3.cc  nicemc.cc  testBedmap.cc  testCrust.cc  testEAS.cc  testInputAfterAntenna.cc  testSettings.cc  testShower.cc  testThermalNoise.cc  testTrigger.cc  testWAIS.cc  testY.cc
(+3442 files in other folders)
